pcmanfm-qt (1.2.1-0ubuntu2) lunar; urgency=medium

  * Put the Lubuntu Manual checkbox where it belongs in the Desktop
    Preferences window. (LP: #1998528)
  * Make the Lubuntu Manual checkbox behave correctly (if the shortcut is
    present, it should be checked, if the shortcut is missing, it should be
    unchecked).

 -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 02 Mar 2023 17:41:45 -0600

pcmanfm-qt (1.2.1-0ubuntu1) lunar; urgency=medium

  * New upstream release.
  * Updated copyright file.
  * Bumped Standards-Version to 4.6.2, no changes necessary.
  * Bumped build dependency for libfm-qt.
  * Removed obsolete '-Wl,--as-needed' linker flag.
  * Added 'Rules-Requires-Root: no' to debian/control.
  * Removed trailing whitespace from changelog.

 -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Fri, 27 Jan 2023 15:55:12 -0600

pcmanfm-qt (1.2.0-0ubuntu1) lunar; urgency=medium

  * New upstream release.
  * Fix the watch file, for real this time.
  * Lubuntuify the package slightly, to make debhelper happy.
  * Bump Standards-version to 4.6.1, no changes needed.
  * Bump build dependencies in debian/control.
  * Remove reverse-applicable upstream patches.
  * Brief copyright update.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 18 Nov 2022 18:55:38 -0600

pcmanfm-qt (1.1.0-0ubuntu4) kinetic; urgency=medium

  * Backport some upstream patches:
    - Prevent an empty desktop path.
      + https://github.com/lxqt/pcmanfm-qt/pull/1601
      + https://github.com/lxqt/pcmanfm-qt/commit/f1438b
    - Allow customizing workspace margins on desktop.
      + https://github.com/lxqt/pcmanfm-qt/pull/1606
      + https://github.com/lxqt/pcmanfm-qt/commit/1151f4

 -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 22 Jun 2022 00:03:18 -0500

pcmanfm-qt (1.1.0-0ubuntu3) kinetic; urgency=medium

  * Create a new patch from thin air (woah, shiny!) which adds the Lubuntu
    Manual as an optional desktop shortcut. Spread the good work Lyn has been
    doing for a few years now. :)
