@@ -5,6 +5,8 @@ pcmanfm-qt (1.2.1-0ubuntu2) lunar; urgency=medium
   * Make the Lubuntu Manual checkbox behave correctly (if the shortcut is
     present, it should be checked, if the shortcut is missing, it should be
     unchecked).
+  * Make the context menu of the Lubuntu Manual shortcut on the desktop behave
+    like the other special shortcuts (Home, Trash, Computer, Network).
 
  -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 02 Mar 2023 17:41:45 -0600
 
